<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">常见布局</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="account">账号:</string>
    <string name="account_hint">请输入账号</string>
    <string name="passwd">密码:</string>
    <string name="passwd_hint">请输入密码</string>
    <string name="en_passwd">确认密码:</string>
    <string name="name">姓名</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>
   <string name="sex1">男</string>
   <string name="sex2">女</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
      <string name="rember">记住密码？</string>
    <string name="remember_passwd">记住密码？</string>
</resources>
