<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="50dp" >
      <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >
       <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:text="@string/account"
                android:textSize="16sp" />
       <EditText
               android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:hint="@string/account_hint"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            >
       <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="3"
          android:gravity="right"
          android:text="@string/passwd"
          android:textSize="16sp" />
       <EditText 
           android:id="@+id/passwd"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="7"
           android:inputType="textPassword"
           android:hint="@string/passwd_hint"
           android:textSize="16sp"
          />
            
        </LinearLayout>
             <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
                 <CheckBox
                     android:id="@+id/xuze"
             android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rember"
           />
           
                </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:orientation="horizontal">
           <Button
           android:onClick="login"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="5"
          android:gravity="center"
          android:text="@string/login"
          android:textSize="16sp" />
            <Button 
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="5"
          android:gravity="center_vertical"
          android:text="@string/register"
          android:textSize="16sp"/>
            
             </LinearLayout>

    

</LinearLayout>
